# download-metoc-spectrum-response

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: install.yaml
sphinx/source/: api.rst  conf.py  index.rst  using-download-metoc-spectrum-response.rst
src/download-metoc-spectrum-response/: download_metoc_spectrum_response.py  srf_index.yaml
src/download_metoc_spectrum_response/: __init__.py  download_metoc_spectrum_response.py  importable.py  srf_catalog.yaml
